--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,10 @@
-name: ci
+name: CI
 
 on:
   pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 env:
-  REGISTRY: cicdprojectregistry.azurecr.io
-  IMAGE_NAME: flask-app
   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 jobs:
@@ -26,7 +23,7 @@ jobs:
     - name: install deps & run tests
       run: |
         pip install -r requirements.txt
-        pytest                    # non‑zero exit code = job stops here
+        pytest
 
     # 3) secret scan
     - uses: gitleaks/gitleaks-action@v2
@@ -45,25 +42,14 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
 
-    # 5) ACR login
-    - uses: azure/docker-login@v2
-      with:
-        login-server: ${{ env.REGISTRY }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+    # 5) Build local image for Trivy scan
+    - name: Build Docker image
+      run: |
+        docker build -t local-image:${{ github.sha }} .
 
-    # 6) build & push image
-    - uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-
-    # 7) Trivy vulnerability scan (fail on CRITICAL/HIGH)
+    # 6) Trivy vulnerability scan
     - uses: aquasecurity/trivy-action@0.31.0
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        image-ref: local-image:${{ github.sha }}
         severity: 'CRITICAL,HIGH'
-        exit-code: '0'            # hard‑fail if bad vulns found
+        exit-code: '0'
