--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  REGISTRY: cicdprojectregistry.azurecr.io
+  REGISTRY: devcicdbasicregistry.azurecr.io
   IMAGE_NAME: flask-app
   WEBAPP_NAME: cicdproject
 
